--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 ACCESS_TOKEN_KEY = "accesstoken"
+ACCESS_TOKEN_KEY_DURATION = "1m"
 REFRESH_TOKEN_KEY = "refreshtoken"
+REFRESH_TOKEN_KEY_DURATION = "2m"
 PORT = "3000"
